# NewsTwitterAgent

./: README.md  agent.mermaid  main.py  pyproject.toml  uipath.json
.uipath/: .auth.json  .error_log  .telemetry.json  NewsTwitter_Agent.0.0.1.nupkg  NewsTwitter_Agent.0.0.10.nupkg  NewsTwitter_Agent.0.0.11.nupkg  NewsTwitter_Agent.0.0.12.nupkg  NewsTwitter_Agent.0.0.13.nupkg  NewsTwitter_Agent.0.0.14.nupkg  NewsTwitter_Agent.0.0.15.nupkg  NewsTwitter_Agent.0.0.16.nupkg  NewsTwitter_Agent.0.0.17.nupkg  NewsTwitter_Agent.0.0.18.nupkg  NewsTwitter_Agent.0.0.2.nupkg  NewsTwitter_Agent.0.0.3.nupkg  NewsTwitter_Agent.0.0.4.nupkg  NewsTwitter_Agent.0.0.5.nupkg  NewsTwitter_Agent.0.0.6.nupkg  NewsTwitter_Agent.0.0.7.nupkg  NewsTwitter_Agent.0.0.8.nupkg  NewsTwitter_Agent.0.0.9.nupkg
__uipath/: state.db
